# DroneSwarm_project_TEK4090

./: .gitignore  Dockerfile  README.md  TEK4090_course_paper.tex  run.sh  simple_test.wbt
Conference-LaTeX-template_10-17-19/: APF_visualization.py  conference_101719.tex
drone_swarm_ctf/controllers/mavic_controller/: mavic_controller.py
drone_swarm_ctf/worlds/: .drone_navigation.wbproj  .mavic_2_pro.wbproj
logs/: analyze_txt.py  output.txt  output1.txt  output2.txt  output4.txt  parse_txt.py
ros2_ws/: analyze_txt.py  start_simulation.sh  start_simulation_OnTest.sh
ros2_ws/src/mavic_simulation/: package.xml  setup.py
ros2_ws/src/mavic_simulation/launch/: robot_launch.py
ros2_ws/src/mavic_simulation/mavic_simulation/: flag_node.py  mavic_controller.py  swarm_manager.py
ros2_ws/src/mavic_simulation/worlds/: mavic_world.wbt
ros2_ws_2/src/drone_swarm/: package.xml  setup.py
ros2_ws_2/src/drone_swarm/drone_swarm/: drone_driver.py
ros2_ws_2/src/drone_swarm/launch/: robot_launch.py
ros2_ws_TEST/: launch.sh  start_simulation.sh
ros2_ws_TEST/src/drone_swarm_ctf_package/: package.xml  setup.cfg  setup.py
ros2_ws_TEST/src/drone_swarm_ctf_package/drone_swarm_ctf_package/: check_entrypoints.py  drone1_driver.py  drone2_driver.py
ros2_ws_TEST/src/drone_swarm_ctf_package/launch/: two_drones_webots.launch.py
ros2_ws_TEST/src/drone_swarm_ctf_package/resource/: drone1.urdf  drone2.urdf
ros2_ws_TEST/src/drone_swarm_ctf_package/worlds/: drone_navigation.wbt  mavic_2_pro.wbt
ros2_ws_test2/: start_simulation_OnTest.sh
(+3 files in other folders)
