<?xml version="1.0"?>
<package format="3">
  <name>drone_swarm_ctf_package</name>
  <version>0.0.0</version>
  <description>Two Mavic drones in Webots exchanging ROS 2 state.</description>

  <maintainer email="oliveroekeberg@gmail.com">Oliver Ekeberg</maintainer>
  <license>TODO: License</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
